# ads-attrition-agent

./: .env.example  .gitignore  CLAUDE.md  app.py  app.yaml  debug_parser.py  pyproject.toml  requirements.txt
application/attrition/: __init__.py  engine.py  plan_builder.py  step_mapper.py  step_sequencer.py  view_namer.py
application/audit/: __init__.py  service.py
application/document_ai/: __init__.py  criteria_extractor.py  data_source_detector.py  databricks_parser.py  pipeline.py  section_classifier.py
application/execution/: __init__.py  cohort_builder.py  orchestrator.py  step_executor.py
application/metadata/: __init__.py  business_rules_seed.py  context_provider.py  excel_parser.py  ingestor.py  relationship_seed.py
application/sql_generation/: __init__.py  orchestrator.py  qc_generator.py  sql_generator.py  sql_validator.py
application/startup/: __init__.py  initializer.py  validator.py
config/: __init__.py  databricks.py  llm_models.py  settings.py
domain/entities/: __init__.py  attrition.py  audit.py  protocol.py  session.py  sql_artifact.py
domain/ports/: __init__.py  attrition_port.py  audit_port.py  llm_port.py  metadata_port.py  session_port.py
infrastructure/ai_search/: __init__.py  index_builder.py  repository.py
infrastructure/delta/: __init__.py  attrition_repo.py  audit_repo.py  metadata_repo.py  schema.py  session_repo.py
infrastructure/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py  (+2 more)
notebooks/: 00_schema_setup.py  01_ingest_metadata.py  02_deploy_checklist.py
ui/: app.py  auth.py  services.py  theme.py
(+31 files in other folders)
